Aprimora comentários e interface de usuário
Atualiza comentários no SQLiteDatabaseHelper.cs para maior clareza.
Adiciona botões "Somar" e "Adicionar" na tela ListaProduto.
Inclui botão "Salvar" na aba NovoProduto e ajusta rótulo.
Melhora feedback ao usuário com mensagens de sucesso e erro.

--- a/MauiAppMinhasCompras/Views/ListaProduto.xaml
+++ b/MauiAppMinhasCompras/Views/ListaProduto.xaml
@@ -4,6 +4,7 @@
              x:Class="MauiAppMinhasCompras.Views.ListaProduto"
              Title="Minhas Compras">
     
+    <!-- Criação dos botões na tela inicial -->
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Somar" />
         <ToolbarItem Text="Adicionar" Clicked="ToolbarItem_Clicked"/>
