Adicionar propriedades e UI para data de cadastro do produto
Implementadas novas propriedades na classe `Produto` para armazenar descrição, quantidade, preço e data de cadastro. Atualizada a `ListView` em `ListaProduto.xaml` para exibir a nova coluna de data. Adicionado um `Label` e um `DatePicker` em `NovoProduto.xaml` para entrada da data da compra. Modificado `NovoProduto.xaml.cs` para incluir a nova propriedade `DataCadastro` ao criar um objeto `Produto`.

--- a/MauiAppMinhasCompras/Views/NovoProduto.xaml
+++ b/MauiAppMinhasCompras/Views/NovoProduto.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:sys="clr-namespace:System;assembly=netstandard"
              x:Class="MauiAppMinhasCompras.Views.NovoProduto"
              Title="Adicionar Produto">
     
@@ -19,6 +20,9 @@
 
         <Label Text="Preço do produto"/>
         <Entry x:Name="txt_preco" Keyboard="Numeric" />
+
+        <Label Text="Data da compra"/>
+        <DatePicker x:Name="_data" Date="{Binding DataCadastro}" />
 
     </VerticalStackLayout>
 </ContentPage>
