--- a/MauiAppMinhasCompras/Views/ListaProduto.xaml
+++ b/MauiAppMinhasCompras/Views/ListaProduto.xaml
@@ -8,6 +8,7 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Somar" Clicked="ToolbarItem_Clicked_1"/>
         <ToolbarItem Text="Adicionar" Clicked="ToolbarItem_Clicked"/>
+		<ToolbarItem Text="Filtrar" Clicked="OnFiltroClicked"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Resources>
@@ -29,14 +30,14 @@
                   Refreshing="lst_produtos_Refreshing"
                   ItemSelected="lst_produtos_ItemSelected">
             <ListView.Header>
-                    <Grid ColumnDefinitions="30, 100, 80, 50, 90, 100"
+                    <Grid ColumnDefinitions="30, 80, 80, 50, 80, 50"
                      BackgroundColor="{StaticResource Gray100}">
                     <Label Grid.Column="0" Text="ID" Padding="5" FontAttributes="Bold" />
                         <Label Grid.Column="1" Text="Descrição" FontAttributes="Bold" />
                         <Label Grid.Column="2" Text="Preço" FontAttributes="Bold" />
                         <Label Grid.Column="3" Text="Qnt" FontAttributes="Bold" />
                         <Label Grid.Column="4" Text="Total" FontAttributes="Bold" />
-						<Label Grid.Column="5" Text="Data" FontAttributes="Bold" />
+						<Label Grid.Column="5" Text="Data" Padding="5" FontAttributes="Bold" />
                 </Grid>
             </ListView.Header>
             <ListView.ItemTemplate>
@@ -45,13 +46,13 @@
                         <ViewCell.ContextActions>
                             <MenuItem Text="Remover" Clicked="MenuItem_Clicked"/>
                         </ViewCell.ContextActions>
-                        <Grid ColumnDefinitions="30, 100, 80, 50, 90, 100">
+                        <Grid ColumnDefinitions="30, 80, 80, 50, 80, 156">
                             <Label Grid.Column="0" Text="{Binding Id}" Padding="5"/>
                             <Label Grid.Column="1" Text="{Binding Descricao}"/>
                             <Label Grid.Column="2" Text="{Binding Preco, StringFormat='{}{0:c}'}" />
                             <Label Grid.Column="3" Text="{Binding Quantidade}"/>
-                            <Label Grid.Column="4" Text="{Binding Total, StringFormat='{}{0:c}'}" />
-							<Label Grid.Column="5" Text="{Binding DataCadastro, StringFormat='{}{0:c}'}"/>
+                            <Label Grid.Column="4" Text="{Binding Total, StringFormat='{}{0:c}'}" Margin="-10" />
+							<Label Grid.Column="5" Text="{Binding DataCadastro, StringFormat='{0:dd/MM/yyyy}'}" Margin="-7"/>
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
